# ShadiaoTetris

./: CMakeLists.txt  main.c
Common/: CMakeLists.txt  common.c  common.h
MainWindow/: CMakeLists.txt  mainwindow.c  mainwindow.h
Welcome/: CMakeLists.txt  welcom.h  welcome.c
