cmake_minimum_required(VERSION 3.14)
project(CandC__ C)
SET(MY_TARGET demo)
set(CMAKE_C_STANDARD 99)
AUX_SOURCE_DIRECTORY(. SRC_LIST)
ADD_SUBDIRECTORY(MainWindow)
ADD_SUBDIRECTORY(Welcome)
ADD_SUBDIRECTORY(Common)

SET(EXTRA_LIBS ${EXTRA_LIBS} Common MainWindow Welcome )
ADD_EXECUTABLE(${MY_TARGET} ${SRC_LIST})
TARGET_LINK_LIBRARIES(${MY_TARGET} ${EXTRA_LIBS})
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)


